--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "date-fns": "^2.22.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "joi": "^17.4.0",
     "pg": "^8.6.0",
@@ -22,8 +23,9 @@
     "supertest": "^6.1.3"
   },
   "scripts": {
+    "start": "node ./src/server.js",
     "dev": "npx nodemon src/server.js",
-    "test": "npx jest -i"
+    "test": "NODE_ENV=test npx jest -i"
   },
   "keywords": [],
   "author": "",
